fix: correct h3 font size and subtask gap in TaskCardComponent

--- a/src/app/main-pages/board/task/task-card/task-card.component.scss
+++ b/src/app/main-pages/board/task/task-card/task-card.component.scss
@@ -2,7 +2,7 @@
 @use "../../../../../styles/variables" as *;
 
 .card-container {
-  @include dFlex($fd: column, $ai: flex-start, $g: 16px);
+  @include dFlex($fd: column, $ai: flex-start, $g: 20px);
   background-color: $white;
   padding: 16px;
   border-radius: 24px;
@@ -32,8 +32,12 @@
   }
 }
 
+h3 {
+  font-size: 16px;
+}
+
 .subtasks {
-  @include dFlex($jc: flex-start, $g: 8px);
+  @include dFlex($jc: flex-start, $g: 10px);
   width: 100%;
 
   span {
